<resources>
    <string name="app_name">Educatro</string>
    <string name="app_logo">App Logo</string>
    
    <!-- Authentication -->
    <string name="welcome_back">Welcome back</string>
    <string name="welcome_user">Welcome user</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_up_to_join">Sign up to join</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_connect">or connect</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="have_an_account">Have an account?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_instructions">Enter your email and will send you instruction on how to reset it</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    
    <!-- Navigation -->
    <string name="browse">Browse</string>
    <string name="my_courses">My Courses</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="downloads">Downloads</string>
    
    <!-- Browse -->
    <string name="search">Search</string>
    <string name="search_for_everything">Search for everything…</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="top_authors">Top Authors</string>
    <string name="popular_authors">Popular Authors</string>
    <string name="recommended_courses">Recommended Courses</string>
    <string name="popular_skills">Popular Skills</string>
    <string name="new_releases">New Releases</string>
    <string name="top_searches">Top Searches</string>
    <string name="courses">Courses</string>
    <string name="authors">Authors</string>
    
    <!-- Course Details -->
    <string name="duration">Duration</string>
    <string name="description">Description</string>
    <string name="skills_you_will_gain">Skills You Will Gain</string>
    <string name="student_feedback">Student Feedback</string>
    <string name="reviews">Reviews</string>
    <string name="related_courses">Related Courses</string>
    <string name="start_free_trial">Start a Free Trial</string>
    <string name="continue_learning">Continue Learning</string>
    <string name="read_more">read more</string>
    <string name="contents">Contents</string>
    <string name="discussions">Discussions</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="lesson_status">Lesson Status</string>
    <string name="play">Play Lesson</string>
    <string name="bookmark">Bookmark</string>
    
    <!-- Author Details -->
    <string name="followers">Followers</string>
    <string name="about">About</string>
    <string name="social_media">Social Media</string>
    <string name="featured">Featured</string>
    
    <!-- Subscription -->
    <string name="start_free_month">Start your free month of membership</string>
    <string name="unlimited_access">Get unlimited access to thousands of classes on demand now</string>
    <string name="pick_plan">Pick a Plan</string>
    <string name="annual">Annual</string>
    <string name="monthly">Monthly</string>
    <string name="billed_annually">Billed annually</string>
    <string name="billed_monthly">Billed monthly</string>
    <string name="first_month_free">Your first month is free. Then</string>
    <string name="per_year">per year.</string>
    <string name="start_your_free_trial">Start Your Free Trial</string>
    <string name="selected">Selected</string>
    
    <!-- Checkout -->
    <string name="choose_payment_method">Choose your payment method</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder">Card Holder</string>
    <string name="expires">Expires</string>
    <string name="cvc">CVC</string>
    <string name="save_credit_information">Save credit information</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="confirm">Confirm</string>
    
    <!-- My Courses -->
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="latest_courses">Latest Courses</string>
    <string name="no_courses_yet">You haven\'t enrolled in any courses yet</string>
    <string name="no_downloads_yet">You haven\'t downloaded any courses yet</string>
    <string name="explore_courses">Explore Courses</string>
    
    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="more_options">More Options</string>
    <string name="newsletter">Newsletter</string>
    <string name="text_messages">Text Messages</string>
    <string name="phone_calls">Phone Calls</string>
    <string name="currency">Currency</string>
    <string name="languages">Languages</string>
    <string name="linked_accounts">Linked Accounts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="certificates">Certificates</string>
    
    <!-- General -->
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="lessons">lessons</string>
    <string name="will_you_going_to_learn">Will you going to learn</string>
    <string name="all_categories">All Categories</string>
    <string name="course_image">Course Image</string>
    <string name="author_profile">Author Profile</string>
    
    <!-- Notifications -->
    <string name="notification_image">Notification Image</string>
    <string name="no_notifications">No notifications yet</string>
    <string name="error_loading_data">Error loading data</string>
</resources>