<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_browse"
        android:title="@string/browse" />
    <item
        android:id="@+id/nav_my_courses"
        android:icon="@drawable/ic_my_courses"
        android:title="@string/my_courses" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/ic_bookmarks"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />
</menu> 